--- a/predavanja1.ipynb
+++ b/predavanja1.ipynb
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-36-304fa5de82ae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Namest a bi radi imeli e:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mbarva\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'e'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m# kar nam seveda javi napako\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-13-304fa5de82ae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Namest a bi radi imeli e:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mbarva\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'e'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m# kar nam seveda javi napako\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
      ]
     }
@@ -964,6 +964,246 @@
    "source": [
     "# Od verzije Pythona 3.6 je to še krajše:\n",
     "print(f'{ime} je star {starost} let')"
+   ]
+  },
+  {
+   "source": [
+    "# Vaje\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 2\n",
+    "b = 3\n",
+    "c = a + b\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "a\nb\nc\nd\ne\nf\ng\nh\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Izpiši posamezne črke iz podanega niza:\n",
+    "niz = \"abcdefgh\"\n",
+    "print(niz[0])\n",
+    "print(niz[1])\n",
+    "print(niz[2])\n",
+    "print(niz[3])\n",
+    "print(niz[4])\n",
+    "print(niz[5])\n",
+    "print(niz[6])\n",
+    "print(niz[7])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "h\ng\nf\ne\nd\nc\nb\na\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Izpiši črke v obratnem vrstnem redu\n",
+    "print(niz[7])\n",
+    "print(niz[6])\n",
+    "print(niz[5])\n",
+    "print(niz[4])\n",
+    "print(niz[3])\n",
+    "print(niz[2])\n",
+    "print(niz[1])\n",
+    "print(niz[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "h\ng\nf\ne\nd\nc\nb\na\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ali pa:\n",
+    "print(niz[-1])\n",
+    "print(niz[-2])\n",
+    "print(niz[-3])\n",
+    "print(niz[-4])\n",
+    "print(niz[-5])\n",
+    "print(niz[-6])\n",
+    "print(niz[-7])\n",
+    "print(niz[-0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "abcdefg\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Še bistveno krajše:\n",
+    "print(niz[:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Pepi Kovačev\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Izpiši svoje ime in primek, v eni vrstici. Ime in priimek naj bosta shrnjena v spremenljivkah i in p:\n",
+    "i = 'Pepi'\n",
+    "p = 'Kovačev'\n",
+    "print(i + ' ' + p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "PK\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Izpiši inicialki svojega imena in priimka\n",
+    "print(i[0]+p[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'Pepi'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 19
+    }
+   ],
+   "source": [
+    "# Spremeni ime tako, da bo vsebovalo samo male črke\n",
+    "i.capitalize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'pepi'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 27
+    }
+   ],
+   "source": [
+    "i.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'PEPI'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 23
+    }
+   ],
+   "source": [
+    "i.upper()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'Pepi'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 24
+    }
+   ],
+   "source": [
+    "i.title()"
    ]
   },
   {
