--- a/predavanje2.ipynb
+++ b/predavanje2.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
     "y = input('vnesi drugo število: ')\n",
     "z = int(x) + int(y)\n",
     "#print(\"Vsota je: \" + str(z))\n",
-    "print((\"Vsota je: {z}\").pf)"
+    "print(f'Vsota je: {z}')"
    ]
   },
   {
@@ -119,9 +119,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "bool"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
    "source": [
     "vrednost = True\n",
     "type(vrednost)"
@@ -129,9 +140,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "x = 1\n",
     "print(bool(x))"
@@ -139,18 +158,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "print(int(vrednost))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "vrednost = False\n",
     "print(int(vrednost))"
@@ -165,9 +200,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Nekaj je šlo narobe\nVerjetno ne smeš seštevati niza z celim številom\nProgram se je končal\n"
+     ]
+    }
+   ],
    "source": [
     "x = input('vnesi prvo stevilo: ')\n",
     "y = input('vnesi drugo število: ')\n",
@@ -216,13 +259,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Konec programa\n"
+     ]
+    }
+   ],
    "source": [
     "odgovor = input('Koliko je 5 + 7? ')\n",
     "if odgovor == '12':\n",
-    "    print('Bravo, čestitamo!')"
+    "    print('Bravo, čestitamo!')\n",
+    "print(\"Konec programa\")"
    ]
   },
   {
@@ -361,11 +413,20 @@
    ]
   },
   {
+   "source": [
+    "# Vaje"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Napiši program ki pozove k vnosu in sešteje dve števili"
+   ]
   }
  ],
  "metadata": {
