--- a/predavanje3.ipynb
+++ b/predavanje3.ipynb
@@ -499,14 +499,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "A\nl\ne\nk\ns\na\nn\nd\ne\nr\n"
+      "e\nk\ns\n"
      ]
     }
    ],
@@ -664,6 +664,27 @@
     "n = a\n",
     "x = a\n",
     "..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "a\ne\na\na\ne\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Pa še ena krajša rešitev:\n",
+    "niz = \"danes pada dež\"\n",
+    "for n in niz:\n",
+    "    if n in ['a', 'e', 'i', 'o', 'u']:\n",
+    "        print(n)"
    ]
   }
  ]
