--- a/predavanje6.ipynb
+++ b/predavanje6.ipynb
@@ -381,6 +381,110 @@
     "pepi = set(tabela)\n",
     "print(pepi)"
    ]
+  },
+  {
+   "source": [
+    "# Delo z datotekami\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# kako ustvarimo in odpremo datoteko\n",
+    "moja_datoteka = open('test.txt', 'w+')\n",
+    "# kako v datoteko kaj vpišemo:\n",
+    "moja_datoteka.write('Kar neko besedilo s tremi pikicami...')\n",
+    "# da se shrani kar smo vpisali moramo datoteko še zapreti:\n",
+    "moja_datoteka.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Kar neko besedilo s tremi pikicami...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# preberemo vsebino datoteke test.txt in jo shranimo v spremenljivko vsebina\n",
+    "datoteka = open('test.txt','r')\n",
+    "vsebina = datoteka.read()\n",
+    "print(vsebina)\n",
+    "datoteka.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ustvarimo csv datoteko\n",
+    "import csv\n",
+    "with open('test.csv', 'w', newline='') as f:\n",
+    "    writer = csv.writer(f, delimiter=',')\n",
+    "    writer.writerow([\"Ime\",\"Mesto\"])\n",
+    "    writer.writerow([\"Pepi\",\"Trščaki\"])\n",
+    "    writer.writerow(['Branko', 'Vrhavč'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['Ime', 'Mesto']\n['Pepi', 'Trščaki']\n['Branko', 'Vrhavč']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Kako preberemo iz csv datoteke\n",
+    "with open('test.csv', mode='r') as f:\n",
+    "    xyz = csv.reader(f, delimiter=',')\n",
+    "    for vrstica in xyz:\n",
+    "        print(vrstica)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Vaja: napiši program, ki uporabnika pozove k vnosu besedila in ga shrani v datoteko besedilo.txt\n",
+    "besedilo = input(\"Vnesi besedilo\")\n",
+    "# kako ustvarimo in odpremo datoteko\n",
+    "moja_datoteka = open('test2.txt', 'w+')\n",
+    "# kako v datoteko kaj vpišemo:\n",
+    "moja_datoteka.write(besedilo)\n",
+    "# da se shrani kar smo vpisali moramo datoteko še zapreti:\n",
+    "moja_datoteka.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Vaja: podana slovarja zapiši v csv datoteko. Ključe uporabi za imena stolpcev, vrednosti pa za podatke v stolpcih\n",
+    "data = {'Ime':['Denis', 'Miha', 'Marko', 'Polona'], 'jezik':['c','Java', 'C++', 'Python']}"
+   ]
   }
  ]
 }
